--- a/source/sites/all/themes/custom/css/blocks.css
+++ b/source/sites/all/themes/custom/css/blocks.css
@@ -2,104 +2,252 @@
  * @file
  * Block Styling
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\0000396}}
+.sprite {
+  background: url(../images/sprite.png) no-repeat top left;
+}
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\0000399}}
+.sprite-coaching-icon {
+  background-position: 0 0;
+  width: 90px;
+  height: 101px;
+}
 
-.block { /* Block wrapper */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003100}}
+.sprite-families-icon {
+  background-position: 0 -151px;
+  width: 84px;
+  height: 81px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003101}}
+.sprite-groups-icon {
+  background-position: 0 -282px;
+  width: 61px;
+  height: 64px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003102}}
+.sprite-individuals-icon {
+  background-position: 0 -396px;
+  width: 84px;
+  height: 85px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003103}}
+.sprite-logo-footer {
+  background-position: 0 -531px;
+  width: 46px;
+  height: 10px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003104}}
+.sprite-logo {
+  background-position: 0 -591px;
+  width: 173px;
+  height: 190px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003105}}
+.sprite-psychotherapy-icon {
+  background-position: 0 -831px;
+  width: 95px;
+  height: 109px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003106}}
+.sprite-signature-programmes-icon {
+  background-position: 0 -990px;
+  width: 136px;
+  height: 114px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003107}}
+.sprite-the-practice-icon {
+  background-position: 0 -1154px;
+  width: 78px;
+  height: 109px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003108}}
+.sprite-the-team-icon {
+  background-position: 0 -1313px;
+  width: 56px;
+  height: 108px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003109}}
+.sprite-training-and-consulting-icon {
+  background-position: 0 -1471px;
+  width: 146px;
+  height: 113px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003110}}
+.sprite-we-are-looking-box {
+  background-position: 0 -1634px;
+  width: 294px;
+  height: 177px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\000039}}
+.block {
+  /* Block wrapper */
   margin-bottom: 1.5em;
 }
-
-.block.first { /* The first block in the region */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000312}}
+.block.first {
+  /* The first block in the region */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000315}}
+.block.last {
+  /* The last block in the region */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000318}}
+.block.odd {
+  /* Zebra striping for each block in the region */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000321}}
+.block.even {
+  /* Zebra striping for each block in the region */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000324}}
+.block h2.block-title {
+  /* Block title */
 }
 
-.block.last { /* The last block in the region */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000329}}
+#block-aggregator-category-1 {
+  /* Block for the latest news items in the first category */
 }
 
-.block.odd { /* Zebra striping for each block in the region */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000332}}
+#block-aggregator-feed-1 {
+  /* Block for the latest news items in the first feed */
 }
 
-.block.even { /* Zebra striping for each block in the region */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000335}}
+#block-block-1 {
+  /* First block created with "Add block" link */
 }
 
-h2.block-title { /* Block title */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000338}}
+#block-blog-recent {
+  /* "Recent blog posts" block */
 }
 
-#block-aggregator-category-1 { /* Block for the latest news items in the first category */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000341}}
+#block-book-navigation {
+  /* "Book navigation" block for the current book's table of contents */
 }
 
-#block-aggregator-feed-1 { /* Block for the latest news items in the first feed */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000344}}
+#block-comment-recent {
+  /* "Recent comments" block */
 }
 
-#block-block-1 { /* First block created with "Add block" link */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000347}}
+#block-forum-active {
+  /* "Active forum topics" block */
 }
 
-#block-blog-recent { /* "Recent blog posts" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000350}}
+#block-forum-new {
+  /* "New forum topics" block */
 }
 
-#block-book-navigation { /* "Book navigation" block for the current book's table of contents */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000353}}
+#block-locale-language {
+  /* Language switcher block */
 }
 
-#block-comment-recent { /* "Recent comments" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000356}}
+#block-menu-menu-NAME {
+  /* Custom menu block */
 }
 
-#block-forum-active { /* "Active forum topics" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000359}}
+#block-node-recent {
+  /* "Recent content" block */
 }
 
-#block-forum-new { /* "New forum topics" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000362}}
+#block-node-syndicate {
+  /* "Syndicate" block for primary RSS feed; see also page.css's .feed-icon */
 }
 
-#block-locale-language { /* Language switcher block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000365}}
+#block-poll-recent {
+  /* "Most recent poll" block */
 }
 
-#block-menu-menu-NAME { /* Custom menu block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000368}}
+#block-profile-author-information {
+  /* "Author information" block for the profile of the page's author */
 }
 
-#block-node-recent { /* "Recent content" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000371}}
+#block-search-form {
+  /* "Search form" block */
 }
 
-#block-node-syndicate { /* "Syndicate" block for primary RSS feed; see also page.css's .feed-icon */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000374}}
+#block-shortcut-shortcuts {
+  /* "Shortcuts" block */
 }
 
-#block-poll-recent { /* "Most recent poll" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000377}}
+#block-statistics-popular {
+  /* "Popular content" block */
 }
 
-#block-profile-author-information { /* "Author information" block for the profile of the page's author */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000380}}
+#block-system-main-menu {
+  /* "Main menu" block */
 }
 
-#block-search-form { /* "Search form" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000383}}
+#block-system-management {
+  /* "Management" block for Drupal management menu */
 }
 
-#block-shortcut-shortcuts { /* "Shortcuts" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000386}}
+#block-system-navigation {
+  /* "Navigation" block for Drupal navigation menu */
 }
 
-#block-statistics-popular { /* "Popular content" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000389}}
+#block-system-user-menu {
+  /* "User menu" block for Drupal user menu */
 }
 
-#block-system-main-menu { /* "Main menu" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000392}}
+#block-system-help {
+  /* "System help" block */
 }
 
-#block-system-management { /* "Management" block for Drupal management menu */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000395}}
+#block-system-main {
+  /* "Main page content" block */
 }
 
-#block-system-navigation { /* "Navigation" block for Drupal navigation menu */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\0000398}}
+#block-system-powered-by {
+  /* "Powered by Drupal" block */
 }
 
-#block-system-user-menu { /* "User menu" block for Drupal user menu */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\00003101}}
+#block-user-login {
+  /* "User login form" block */
 }
 
-#block-system-help { /* "System help" block */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\00003104}}
+#block-user-new {
+  /* "Who's new" block for a list of the newest users */
 }
 
-#block-system-main { /* "Main page content" block */
-}
-
-#block-system-powered-by { /* "Powered by Drupal" block */
-}
-
-#block-user-login { /* "User login form" block */
-}
-
-#block-user-new { /* "Who's new" block for a list of the newest users */
-}
-
-#block-user-online { /* "Who's online" block for a list of the online users */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/blocks\.scss}line{font-family:\00003107}}
+#block-user-online {
+  /* "Who's online" block for a list of the online users */
 }
