--- a/source/sites/all/themes/custom/css/nodes.css
+++ b/source/sites/all/themes/custom/css/nodes.css
@@ -4,40 +4,144 @@
  *
  * Style anything that isn't in the $content variable.
  */
-
-
-.node { /* Node wrapper */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\0000396}}
+.sprite {
+  background: url(../images/sprite.png) no-repeat top left;
 }
 
-.preview .node { /* Preview of the content before submitting new or updated content */
-  /* background-color: #ffffea; */ /* Drupal core uses a #ffffea background */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\0000399}}
+.sprite-coaching-icon {
+  background-position: 0 0;
+  width: 90px;
+  height: 101px;
 }
 
-.node .node-title { /* Node title */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003100}}
+.sprite-families-icon {
+  background-position: 0 -151px;
+  width: 84px;
+  height: 81px;
 }
 
-.node .user-picture { /* The picture of the node author */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003101}}
+.sprite-groups-icon {
+  background-position: 0 -282px;
+  width: 61px;
+  height: 64px;
 }
 
-.node .submitted { /* The "posted by" information */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003102}}
+.sprite-individuals-icon {
+  background-position: 0 -396px;
+  width: 84px;
+  height: 85px;
 }
 
-.node .content { /* Node's content wrapper */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003103}}
+.sprite-logo-footer {
+  background-position: 0 -531px;
+  width: 46px;
+  height: 10px;
 }
 
-.node ul.links { /* Node links. See also the ul.links declaration in the pages.css. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003104}}
+.sprite-logo {
+  background-position: 0 -591px;
+  width: 173px;
+  height: 190px;
 }
 
-.node-promoted { /* A node that has been promoted to the front page */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003105}}
+.sprite-psychotherapy-icon {
+  background-position: 0 -831px;
+  width: 95px;
+  height: 109px;
 }
 
-.node-sticky { /* A sticky node (displayed before others in a list) */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003106}}
+.sprite-signature-programmes-icon {
+  background-position: 0 -990px;
+  width: 136px;
+  height: 114px;
 }
 
-.node-by-viewer { /* A node created by the current user */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003107}}
+.sprite-the-practice-icon {
+  background-position: 0 -1154px;
+  width: 78px;
+  height: 109px;
 }
 
-.node-teaser { /* A node displayed as teaser */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003108}}
+.sprite-the-team-icon {
+  background-position: 0 -1313px;
+  width: 56px;
+  height: 108px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003109}}
+.sprite-training-and-consulting-icon {
+  background-position: 0 -1471px;
+  width: 146px;
+  height: 113px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003110}}
+.sprite-we-are-looking-box {
+  background-position: 0 -1634px;
+  width: 294px;
+  height: 177px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000311}}
+.node {
+  /* Node wrapper */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000313}}
+.preview .node {
+  /* Preview of the content before submitting new or updated content */
+  /* background-color: #ffffea; */
+  /* Drupal core uses a #ffffea background */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000317}}
+.node .node-title {
+  /* Node title */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000320}}
+.node .user-picture {
+  /* The picture of the node author */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000323}}
+.node .submitted {
+  /* The "posted by" information */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000326}}
+.node .content {
+  /* Node's content wrapper */
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000329}}
+.node ul.links {
+  /* Node links. See also the ul.links declaration in the pages.css. */
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000334}}
+.node-promoted {
+  /* A node that has been promoted to the front page */
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000337}}
+.node-sticky {
+  /* A sticky node (displayed before others in a list) */
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000340}}
+.node-by-viewer {
+  /* A node created by the current user */
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000343}}
+.node-teaser {
+  /* A node displayed as teaser */
 }
 
 /*
@@ -45,19 +149,25 @@
  * it is. If you create a new content type called "my-custom-type", it will
  * receive a "node-my-custom-type" class.
  */
-
-.node-page { /* Page content node */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000352}}
+.node-page {
+  /* Page content node */
 }
 
-.node-article { /* Article content node */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000355}}
+.node-article {
+  /* Article content node */
 }
 
-.node-unpublished { /* Unpublished nodes */
-  /* background-color: #fff4f4; */ /* Drupal core uses a #fff4f4 background */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000358}}
+.node-unpublished {
+  /* Unpublished nodes */
+  /* background-color: #fff4f4; */
+  /* Drupal core uses a #fff4f4 background */
 }
-
-.node-unpublished p.unpublished,
-.comment-unpublished p.unpublished { /* The word "Unpublished" displayed underneath the content. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/nodes\.scss}line{font-family:\0000361}}
+.node-unpublished p.unpublished {
+  /* The word "Unpublished" displayed underneath the content. */
   height: 0;
   overflow: visible;
   color: #d8d8d8;
@@ -67,10 +177,5 @@
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
-  word-wrap: break-word; /* A very nice CSS3 property */
-}
-
-.lt-ie8 .node-unpublished p.unpublished > *,
-.lt-ie8 .comment-unpublished > * {
-  position: relative; /* Otherwise these elements will appear below the "Unpublished" text. */
+  word-wrap: break-word;
 }
