--- a/source/sites/all/themes/custom/css/normalize-rtl.css
+++ b/source/sites/all/themes/custom/css/normalize-rtl.css
@@ -1,13 +1,100 @@
 /* normalize-rtl.css - RTL language extension of normalize.scss. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\0000396}}
+.sprite {
+  background: url(../images/sprite.png) no-repeat top left;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\0000399}}
+.sprite-coaching-icon {
+  background-position: 0 0;
+  width: 90px;
+  height: 101px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003100}}
+.sprite-families-icon {
+  background-position: 0 -151px;
+  width: 84px;
+  height: 81px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003101}}
+.sprite-groups-icon {
+  background-position: 0 -282px;
+  width: 61px;
+  height: 64px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003102}}
+.sprite-individuals-icon {
+  background-position: 0 -396px;
+  width: 84px;
+  height: 85px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003103}}
+.sprite-logo-footer {
+  background-position: 0 -531px;
+  width: 46px;
+  height: 10px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003104}}
+.sprite-logo {
+  background-position: 0 -591px;
+  width: 173px;
+  height: 190px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003105}}
+.sprite-psychotherapy-icon {
+  background-position: 0 -831px;
+  width: 95px;
+  height: 109px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003106}}
+.sprite-signature-programmes-icon {
+  background-position: 0 -990px;
+  width: 136px;
+  height: 114px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003107}}
+.sprite-the-practice-icon {
+  background-position: 0 -1154px;
+  width: 78px;
+  height: 109px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003108}}
+.sprite-the-team-icon {
+  background-position: 0 -1313px;
+  width: 56px;
+  height: 108px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003109}}
+.sprite-training-and-consulting-icon {
+  background-position: 0 -1471px;
+  width: 146px;
+  height: 113px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003110}}
+.sprite-we-are-looking-box {
+  background-position: 0 -1634px;
+  width: 294px;
+  height: 177px;
+}
 
 /* =============================================================================
    Lists
    ========================================================================== */
-
 /*
  * Addresses margins set differently in IE6/7
  */
-
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/normalize-rtl\.scss}line{font-family:\0000314}}
 dd {
   margin: 0 30px 0 0;
 }
@@ -15,31 +102,24 @@ dd {
 /*
  * Addresses paddings set differently in IE6/7
  */
-
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/normalize-rtl\.scss}line{font-family:\0000325}}
 menu,
 ol,
 ul,
-.item-list ul /* Drupal override */ {
+.item-list ul {
   padding: 0 30px 0 0;
 }
 
 /* =============================================================================
    Forms
    ========================================================================== */
-
 /*
  * 3. Corrects alignment displayed oddly in IE6/7
  */
-
-legend {
-  *margin-left: 0;
-  *margin-right: -7px; /* 3 */
-}
-
 /* =============================================================================
    Tables
    ========================================================================== */
-
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/normalize-rtl\.scss}line{font-family:\0000348}}
 th {
   text-align: right;
 }
