--- a/source/sites/all/themes/custom/css/print.css
+++ b/source/sites/all/themes/custom/css/print.css
@@ -4,50 +4,149 @@
  *
  * We provide some sane print styling for Drupal using Zen's layout method.
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\0000396}}
+.sprite {
+  background: url(../images/sprite.png) no-repeat top left;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\0000399}}
+.sprite-coaching-icon {
+  background-position: 0 0;
+  width: 90px;
+  height: 101px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003100}}
+.sprite-families-icon {
+  background-position: 0 -151px;
+  width: 84px;
+  height: 81px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003101}}
+.sprite-groups-icon {
+  background-position: 0 -282px;
+  width: 61px;
+  height: 64px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003102}}
+.sprite-individuals-icon {
+  background-position: 0 -396px;
+  width: 84px;
+  height: 85px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003103}}
+.sprite-logo-footer {
+  background-position: 0 -531px;
+  width: 46px;
+  height: 10px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003104}}
+.sprite-logo {
+  background-position: 0 -591px;
+  width: 173px;
+  height: 190px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003105}}
+.sprite-psychotherapy-icon {
+  background-position: 0 -831px;
+  width: 95px;
+  height: 109px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003106}}
+.sprite-signature-programmes-icon {
+  background-position: 0 -990px;
+  width: 136px;
+  height: 114px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003107}}
+.sprite-the-practice-icon {
+  background-position: 0 -1154px;
+  width: 78px;
+  height: 109px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003108}}
+.sprite-the-team-icon {
+  background-position: 0 -1313px;
+  width: 56px;
+  height: 108px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003109}}
+.sprite-training-and-consulting-icon {
+  background-position: 0 -1471px;
+  width: 146px;
+  height: 113px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/_base\.scss}line{font-family:\00003110}}
+.sprite-we-are-looking-box {
+  background-position: 0 -1634px;
+  width: 294px;
+  height: 177px;
+}
 
 @media print {
-
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/print\.scss}line{font-family:\0000314}}
   a:link,
-  a:visited { /* underline all links */
+  a:visited {
+    /* underline all links */
     text-decoration: underline !important;
   }
-
-  #site-name a:link,
-  #site-name a:visited { /* Don't underline header */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/print\.scss}line{font-family:\0000317}}
+  #site-name a:link, #site-name
+  a:visited {
+    /* Don't underline header */
     text-decoration: none !important;
   }
 
-  #content a[href]:after { /* Add visible URL after links. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/print\.scss}line{font-family:\0000323}}
+  #content a[href]:after {
+    /* Add visible URL after links. */
     content: " (" attr(href) ")";
     font-weight: normal;
     font-size: 16px;
   }
-
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/print\.scss}line{font-family:\0000330}}
   #content a[href^="javascript:"]:after,
-  #content a[href^="#"]:after { /* Only display useful links. */
+  #content a[href^="#"]:after {
+    /* Only display useful links. */
     content: "";
   }
-
-  #content abbr[title]:after { /* Add visible title after abbreviations. */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/print\.scss}line{font-family:\0000334}}
+  #content abbr[title]:after {
+    /* Add visible title after abbreviations. */
     content: " (" attr(title) ")";
   }
 
-  #content { /* Un-float the content */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/print\.scss}line{font-family:\0000339}}
+  #content {
+    /* Un-float the content */
     float: none !important;
     width: 100% !important;
     margin: 0 !important;
     padding: 0 !important;
   }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/print\.scss}line{font-family:\0000349}}
   body,
   #page,
   #main,
-  #content { /* Turn off any background colors or images */
+  #content {
+    /* Turn off any background colors or images */
     color: #000;
     background-color: transparent !important;
     background-image: none !important;
   }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Applications\/MAMP\/htdocs\/eximia\/source\/sites\/all\/themes\/custom\/sass\/print\.scss}line{font-family:\0000368}}
   #skip-link,
   #toolbar,
   #navigation,
@@ -61,9 +160,10 @@
   .book-navigation,
   .forum-topic-navigation,
   .pager,
-  .feed-icons { /* Hide sidebars and nav elements */
+  .feed-icons {
+    /* Hide sidebars and nav elements */
     visibility: hidden;
     display: none;
   }
-
-} /* End @media print */
+}
+/* End @media print */
