--- a/source/sites/all/themes/custom/sass/_base.scss
+++ b/source/sites/all/themes/custom/sass/_base.scss
@@ -67,24 +67,47 @@ $verdana:         Verdana, Tahoma, "DejaVu Sans", sans-serif;
 $tahoma:          Tahoma, Verdana, "DejaVu Sans", sans-serif;
 $helvetica:       Helvetica, Arial, "Nimbus Sans L", sans-serif;
 $arial:           Arial, Helvetica, "Nimbus Sans L", sans-serif;
-
+$futuramedium: futuramedium;
 // For an explanation of why "sans-serif" is at the end of this list, see
 // http://meyerweb.com/eric/thoughts/2010/02/12/fixed-monospace-sizing/
 $courier:         "Courier New", "DejaVu Sans Mono", monospace, sans-serif;
 
 // Now create some variables for the font stacks we want to use on this site.
-$base-font-family: $verdana; // The font family set on the html element.
-$font-body:        $verdana;
+$base-font-family: $futuramedium; // The font family set on the html element.
+$font-body:        $futuramedium;
 $font-monospace:   $courier;
 
 
 //
 // Colors, etc.
 //
+$grisOscuro : #8A8480;
+$grisClaro : #ADAAA6;
+$grisTextoMenu: #5F5952;
+$grisTexto : #5F5952;
+$verdeOscuro: #226772;
+$verdeClaro: #66959D;
+$naranja: #E8891A;
 
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
 
+// SPRITE
+.sprite {
+  background: url(../images/sprite.png) no-repeat top left;
+}
+.sprite-coaching-icon{ background-position: 0 0; width: 90px; height: 101px; }
+.sprite-families-icon{ background-position: 0 -151px; width: 84px; height: 81px; }
+.sprite-groups-icon{ background-position: 0 -282px; width: 61px; height: 64px; }
+.sprite-individuals-icon{ background-position: 0 -396px; width: 84px; height: 85px; }
+.sprite-logo-footer{ background-position: 0 -531px; width: 46px; height: 10px; }
+.sprite-logo{ background-position: 0 -591px; width: 173px; height: 190px; }
+.sprite-psychotherapy-icon{ background-position: 0 -831px; width: 95px; height: 109px; }
+.sprite-signature-programmes-icon{ background-position: 0 -990px; width: 136px; height: 114px; }
+.sprite-the-practice-icon{ background-position: 0 -1154px; width: 78px; height: 109px; }
+.sprite-the-team-icon{ background-position: 0 -1313px; width: 56px; height: 108px; }
+.sprite-training-and-consulting-icon{ background-position: 0 -1471px; width: 146px; height: 113px; }
+.sprite-we-are-looking-box{ background-position: 0 -1634px; width: 294px; height: 177px; }
 
 //
 // Partials to be shared with all .scss files.
