--- a/source/sites/all/themes/custom/sass/layouts/responsive-sidebars.scss
+++ b/source/sites/all/themes/custom/sass/layouts/responsive-sidebars.scss
@@ -79,14 +79,15 @@ $zen-auto-include-item-base: false;
 
 @media all and (min-width: 480px) {
   #main {
-    padding-top: 3em; /* Move all the children of #main down to make room. */
+
     position: relative;
   }
   #navigation {
-    position: absolute;
-    top: 0; /* Move the navbar up inside #main's padding. */
-    height: 3em;
-    width: $zen-grid-width;
+    float:right;
+    margin-top: 40px; /* Move the navbar up inside #main's padding. */
+    height: 225px;
+    //width: $zen-grid-width ;
+    width:696px;
   }
 }
 
