--- a/source/sites/all/themes/custom/sass/normalize.scss
+++ b/source/sites/all/themes/custom/sass/normalize.scss
@@ -109,6 +109,18 @@ audio:not([controls]) {
 }
 */
 
+@font-face {
+  font-family: 'futuramedium';
+  src: url('../fonts/futura-medium-webfont.eot');
+  src: url('../fonts/futura-medium-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/futura-medium-webfont.woff') format('woff'),
+  url('../fonts/futura-medium-webfont.ttf') format('truetype'),
+  url('../fonts/futura-medium-webfont.svg#futuramedium') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 /*
  * 1. Corrects text resizing oddly in IE6/7 when body font-size is set using em units
  *    http://clagnut.com/blog/348/#c790
