--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -16,7 +16,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 28px 39px 0 39px;
   color: $grisTexto;
   background: url(../images/bg.jpg);
   background-size: 100%;
