--- a/source/sites/all/themes/custom/sass/_base.scss
+++ b/source/sites/all/themes/custom/sass/_base.scss
@@ -88,7 +88,7 @@ $grisTexto : #5F5952;
 $verdeOscuro: #226772;
 $verdeClaro: #66959D;
 $naranja: #E8891A;
-
+$grisClaroTexto: #686967;
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
 
