--- a/source/sites/all/themes/custom/sass/blocks.scss
+++ b/source/sites/all/themes/custom/sass/blocks.scss
@@ -106,3 +106,21 @@
 
 #block-user-online { /* "Who's online" block for a list of the online users */
 }
+
+.view-display-id-block_team_members{
+  margin-top: 25px;
+  font-size: 12px;
+  .views-row{
+    margin-bottom: 8px;
+  }
+  a{
+
+    text-decoration: none;
+    color: $grisClaroTexto;
+
+  }
+  a:before{
+    content:"+ ";
+  }
+
+}
