--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -685,6 +685,10 @@ span.field-label {
         .faq-link{
           text-decoration: none;
           display: block;
+          color: #686967;
+          margin-bottom: 15px;
+          padding-left: 22px;
+          background: url("../images/mas.png") no-repeat left center;
         }
       }
       
